--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,9 @@
 {
-    "extends": "rallycoding"
+    "extends": "rallycoding",
+    "env": {
+        "browser": true
+    }, 
+        "globals": {
+            "fetch": true
+        }
 }
